--- a/website/scripts/vertx-template.html
+++ b/website/scripts/vertx-template.html
@@ -12,8 +12,8 @@
       --google-codelab-header-background: var(--app-primary-color);
       --google-codelab-fab-background: var(--app-primary-color);
 
-      // hack for .toc-item not being overrideable hack for .toc-item not being overrideable
-      --paper-blue-500: var(--app-primary-color);;*/
+      /* hack for .toc-item not being overrideable hack for .toc-item not being overrideable */
+      --paper-blue-500: var(--app-primary-color);
     };
 
     google-codelab-step {
