--- a/website/src/codelab-selector.html
+++ b/website/src/codelab-selector.html
@@ -7,6 +7,7 @@
 <link rel="import" href="../bower_components/app-route/app-route.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
+<link rel="import" href="../bower_components/codelab-components/google-codelab-elements.html">
 
 <link rel="import" href="elements/codelab-card.html">
 
