--- a/src/codelabs/your-first-pwapp/index.vertx-template.html
+++ b/src/codelabs/your-first-pwapp/index.vertx-template.html
@@ -1,8 +1,4 @@
-<html><head><link rel="import" href="../../../bower_components/polymer/polymer.html">
-<link rel="import" href="../../../bower_components/codelab-components/google-codelab-elements.html">
-<link rel="import" href="../../../bower_components/app-route/app-route.html">
-
-</head><body><dom-module id="your-first-pwapp">
+<html><head></head><body><dom-module id="your-first-pwapp">
 
 <template>
 
@@ -12,7 +8,7 @@
       --google-codelab-fab-background: var(--app-primary-color);
 
       
-      --paper-blue-500: var(--app-primary-color);;*/
+      --paper-blue-500: var(--app-primary-color);
     };
 
     google-codelab-step {
