--- a/src/codelabs.html
+++ b/src/codelabs.html
@@ -1,7 +1,4 @@
-<html><head><link rel="import" href="../bower_components/polymer/polymer.html">
-<link rel="import" href="../bower_components/app-route/app-route.html">
-
-</head><body><dom-module id="my-codelabs">
+<html><head><meta charset="UTF-8"><link rel="import" href="my-app.html"></head><body><dom-module id="my-codelabs">
 
   <template>
     <style>
