--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link rel="shortcut icon" sizes="32x32" href="/images/app-icon-32.png">
 
   <meta name="theme-color" content="#dd4814">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="manifest" href="manifest.json">
 
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Ubuntu:400,300,400italic,500,700|Ubuntu+Mono">
 
-  <script>window.Polymer={lazyRegister:!0,dom:"shadow"},function(){if("registerElement"in document&&"import"in document.createElement("link")&&"content"in document.createElement("template"));else{var e=document.createElement("script");e.src="/bower_components/webcomponentsjs/webcomponents-lite.min.js",document.head.appendChild(e)}}(),"serviceWorker"in navigator&&window.addEventListener("load",function(){navigator.serviceWorker.register("/service-worker.js")});</script>
+  <script>window.Polymer={lazyRegister:!0,dom:"shadow"},function(){if("registerElement"in document&&"import"in document.createElement("link")&&"content"in document.createElement("template"));else{var e=document.createElement("script");e.src="bower_components/webcomponentsjs/webcomponents-lite.min.js",document.head.appendChild(e)}}(),"serviceWorker"in navigator&&window.addEventListener("load",function(){navigator.serviceWorker.register("service-worker.js")});</script>
 
-  <link rel="import" href="/src/my-app.html">
+  <link rel="import" href="src/my-app.html">
 
   <style>
 
